--- a/src/apps/options/OptionsLayout.scss
+++ b/src/apps/options/OptionsLayout.scss
@@ -24,11 +24,11 @@
   &:has(.ti-dropdown-open) {
     .options-main {
       z-index: 2000;
-      overflow: visible; // Allow dropdowns to overlap navigation
+      position: relative;
     }
     .tab-content-container {
       z-index: 2000;
-      overflow: visible; // Allow dropdowns to overlap sidebar/header
+      position: relative;
     }
   }
 }
